--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Theam Macrocoupon",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "http-proxy": "^1.15.2",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "react-scroll": "^1.4.4",
     "react.container": "^1.0.41",
     "redux": "^2.0.0",
     "redux-promise": "^0.5.3",
